data scraper done

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "nodemonConfig": {
+    "ignore": ["data/scraped-data.json"]
+  },
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
