fix backend Dockerfile: Install Chromium

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,22 @@
 FROM node:20-alpine
 
+RUN apk add --no-cache \
+    chromium \
+    nss \
+    freetype \
+    freetype-dev \
+    harfbuzz \
+    ca-certificates \
+    ttf-freefont
+
+ENV PUPPETEER_RUNS_IN_DOCKER=true
+
 WORKDIR /app
 
-COPY package*.json  ./
+COPY package*.json ./
 
 RUN npm install
 
-COPY . . 
-
-EXPOSE 3000
+COPY . .
 
 CMD ["npm", "run", "start"]
